--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,23 @@
 {
-    "name": "cyonite/jade.php",
+    "name": "JumpLink/jade.php",
     "description": "HAML-like template engine for PHP 5.3",
     "keywords": ["jade", "minification","template"],
-    "homepage": "https://github.com/cyonite/jade.php",
+    "homepage": "https://github.com/JumpLink/jade.php",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
             "name": "Andreas Nurbo",
-            "email": "",
+            "email": "muss@ausgefuelltsein.de",
             "homepage": "http://cyonitesystems.com",
             "role": "Maintainer"
-        }
+        },
+	{
+	    "name": "Pascal Garber",
+            "email": "pascal@jumplink.eu",
+            "homepage": "https://jumplink.eu",
+            "role": "Bugfixes"
+	}
     ],
     "require": {
         "php": ">=5.3.0"
