--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "jumplink/jade.php",
+    "version": "1.0.0",
     "description": "HAML-like template engine for PHP 5.3",
     "keywords": ["jade", "minification","template"],
     "homepage": "https://github.com/JumpLink/jade.php",
